fix: update MyStudentsPage, MyTeachersPage, MessageScreen with tabs and unread badges

--- a/my_new_app/backend/public/index.html
+++ b/my_new_app/backend/public/index.html
@@ -3,9 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <title>学友师App</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin-top: 50px;
+    }
+    footer {
+      position: fixed;
+      bottom: 10px;
+      width: 100%;
+      text-align: center;
+      font-size: 14px;
+      color: #666;
+    }
+    footer a {
+      color: #666;
+      text-decoration: none;
+    }
+    footer a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
   <h1>欢迎访问学友师App</h1>
-  <p>本网站为App提供后端服务，目前正在建设中。</p>
+  <p>本网站为App提供下载服务，目前正在建设中。</p>
+
+  <footer>
+    <a href="https://beian.miit.gov.cn/" target="_blank">皖ICP备2025094560号</a>
+  </footer>
 </body>
 </html>
