--- a/my_new_app/backend/public/index.html
+++ b/my_new_app/backend/public/index.html
@@ -1,37 +1,40 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>学友师App</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      margin-top: 50px;
-    }
-    footer {
-      position: fixed;
-      bottom: 10px;
-      width: 100%;
-      text-align: center;
-      font-size: 14px;
-      color: #666;
-    }
-    footer a {
-      color: #666;
-      text-decoration: none;
-    }
-    footer a:hover {
-      text-decoration: underline;
-    }
+    :root { color-scheme: light dark; }
+    body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans SC", "PingFang SC", "Microsoft YaHei", sans-serif; margin: 0; padding: 0; }
+    header { padding: 40px 16px 0; text-align: center; }
+    h1 { margin: 0 0 8px; font-size: 28px; }
+    p.subtitle { margin: 0; color: #666; }
+    main { max-width: 820px; margin: 32px auto; padding: 0 16px; text-align: center; }
+    .links { display: inline-flex; gap: 16px; flex-wrap: wrap; margin-top: 20px; }
+    .links a { text-decoration: none; color: #0a84ff; }
+    .links a:hover { text-decoration: underline; }
+    footer { margin: 40px 0 20px; text-align: center; color: #666; font-size: 14px; }
+    footer a { color: inherit; text-decoration: none; }
+    footer a:hover { text-decoration: underline; }
   </style>
 </head>
 <body>
-  <h1>欢迎访问学友师App</h1>
-  <p>本网站为App提供下载服务，目前正在建设中。</p>
+  <header>
+    <h1>欢迎访问学友师App</h1>
+    <p class="subtitle">本网站为 App 提供下载与协议公示，服务仅面向中国大陆用户。</p>
+  </header>
+
+  <main>
+    <div class="links">
+      <a href="/legal/terms.html" target="_blank" rel="noopener">用户服务协议</a>
+      <a href="/legal/privacy.html" target="_blank" rel="noopener">隐私政策</a>
+      <a href="mailto:1431690299@qq.com">联系邮箱：1431690299@qq.com</a>
+    </div>
+  </main>
 
   <footer>
-    <a href="https://beian.miit.gov.cn/" target="_blank">皖ICP备2025094560号</a>
+    <a href="https://beian.miit.gov.cn/" target="_blank" rel="noopener">皖ICP备2025094560号</a>
   </footer>
 </body>
 </html>
